uso de constantes y cambios en el css

--- a/templates/productos.html
+++ b/templates/productos.html
@@ -37,7 +37,7 @@
         </tr>
         {% for p in productos %}
             <tr>
-                <td>{{ p.grupo }}</td>
+                <td><font style="color: red"><center>{{ p.grupo }}</center></font></td>
                 <td><center><img src="static/{{ p.imagen }}" alt="{{ p.imagen }}" width="150px"></center></td>
                 <td>{{ p.descripcion }}</td>
             </tr>
